--- a/lify/index.css
+++ b/lify/index.css
@@ -6,7 +6,7 @@ body {
     width: 100%;
     margin: 0;
     padding: 0;
-    background-color: rgb(255, 0, 0);
+    background-color: black;
 }
 
 #grid {
