--- a/index.css
+++ b/index.css
@@ -43,7 +43,11 @@ body {
     cursor: pointer;
 }
 
-.game:hover>.titreGame {
+.game:hover>.parentGameOnLeftImg>.titreGame {
+    color: black;
+}
+
+.game:hover>.parentGameOnLeftImg>.dateGame {
     color: black;
 }
 
@@ -72,10 +76,6 @@ body {
     font-size: 1.2rem;
     font-family: 'Roboto', sans-serif;
     margin: 0;
-    font-weight: bold;
-    padding: 5px 10px;
-    border-radius: 5px;
-    border: 1px solid white;
 }
 
 .menu {
@@ -106,4 +106,27 @@ body {
 .itemMenu:hover{
     background-color: white;
     color: black;
+}
+
+.parentGameOnLeftImg{
+    display: flex;
+    flex-direction: column;
+}
+
+.dateGame{
+    color: white;
+    font-size: 0.8rem;
+    font-family: 'Roboto', sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+.commitparent{
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    justify-content: center;
+    padding: 3px 6px;
+    border-radius: 5px;
+    border: 1px solid white;
 }
