--- a/index.css
+++ b/index.css
@@ -92,28 +92,29 @@ body {
     transform: translateX(-50%);
 }
 
-.itemMenu{
+.itemMenu {
     color: white;
     padding: 3px 6px;
     border-radius: 5px;
     border: 1px solid white;
     cursor: pointer;
 }
-.itemMenu>span{
+
+.itemMenu>span {
     font-size: 1.7rem;
 }
 
-.itemMenu:hover{
+.itemMenu:hover {
     background-color: white;
     color: black;
 }
 
-.parentGameOnLeftImg{
+.parentGameOnLeftImg {
     display: flex;
     flex-direction: column;
 }
 
-.dateGame{
+.dateGame {
     color: white;
     font-size: 0.8rem;
     font-family: 'Roboto', sans-serif;
@@ -121,7 +122,7 @@ body {
     padding: 0;
 }
 
-.commitparent{
+.commitparent {
     display: flex;
     flex-direction: column;
     align-items: left;
@@ -129,4 +130,67 @@ body {
     padding: 3px 6px;
     border-radius: 5px;
     border: 1px solid white;
+}
+
+#menuRight {
+    display: flex;
+    flex-direction: row;
+    position: absolute;
+    top: 10px;
+    right: 7.5%;
+    justify-content: right;
+}
+
+#searchButton {
+    outline: none;
+    border: none;
+    background-color: transparent;
+    padding: 0;
+    height: fit-content;
+    display: flex;
+    margin-bottom: -3px;
+}
+
+#searchButton>span {
+    font-size: 1.8rem;
+    color: white;
+    cursor: pointer;
+}
+
+#searchBar {
+    border: none;
+    border-bottom: 1px solid white;
+    background-color: transparent;
+    animation: searchbarspawn 0.5s ease-in-out;
+    outline: none;
+    color: white;
+    font-size: 0.8rem;
+    font-family: 'Roboto', sans-serif;
+    padding: 5px 2px;
+}
+
+
+@keyframes searchBarDisappear {
+    0% {
+        width: 100%;
+    }
+
+    100% {
+        width: 0%;
+    }
+}
+
+@keyframes searchbarspawn {
+    0% {
+        width: 0%;
+    }
+
+    100% {
+        width: 100%;
+    }
+}
+
+.highlight {
+    background-color: white;
+    color: black;
 }
