--- a/démineur/index.css
+++ b/démineur/index.css
@@ -4,13 +4,14 @@ html,
 body{
     margin: 0;
     padding: 0;
-    height: 100%;
+    height: fit-content;
     width: 100%;
     display: flex;
     align-items: center;
     background-color: #f0f0f0;
     flex-direction: column;
-    gap : 50px;
+    gap : 20px;
+    padding-bottom: 20px;
 }
 
 #form{
