--- a/walker/index.css
+++ b/walker/index.css
@@ -1,10 +1,24 @@
 html,
 body {
     height: 100%;
+    min-width: 200%;
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
-    background-color: #f5f5f5;
-    width: 100%;
     overflow: hidden;
+}
+
+html {
+    background: linear-gradient(0deg, #FFFFFF 0%, rgba(107, 216, 224, 0.6) 50%);
+}
+
+body {
+    background-image: url(backgroundSprite.png);
+    background-size: 50% auto;
+    background-repeat: repeat-x;
+    background-position: 0 100%;
+}
+
+#restart:hover{
+    scale: 1.1;
 }
