--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ body {
     left: 0;
 }
 
-body{
+body {
     display: flex;
     background-color: #1a1a1a;
     flex-direction: column;
@@ -23,7 +23,7 @@ body{
     justify-content: flex-start;
     flex-wrap: wrap;
     gap: 10px;
-    margin: 100px auto 0 auto;
+    margin: 20px auto 0 auto;
 }
 
 .game {
@@ -74,4 +74,90 @@ body{
     font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
+}
+
+#carrouselNews {
+    width: 80%;
+    height: 200px;
+    align-items: center;
+    margin: 0 auto;
+    overflow: hidden;
+    margin-top: 20px;
+}
+
+.carrouselFrameHere{
+    display: flex;
+}
+
+.carrouselFrameNotHere{
+    display: none;
+}
+
+.carrouselFrame {
+    width: 100%;
+    height: 100%;
+    flex-direction: column;
+    align-items: start;
+    justify-content: end;
+    position: relative;
+    background-size: 50%;
+    background-position: center;
+}
+
+.carrouselFrame::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    backdrop-filter: blur(20px);
+}
+
+.carrouselFrame p {
+    position: relative;
+    z-index: 1;
+    color: white;
+    font-family: 'Roboto', sans-serif;
+}
+
+.messageText {
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin: 0 0 5px 10px;
+    text-shadow: 1px 1px 3px blue;
+}
+
+.dateText {
+    font-size: 1rem;
+    margin: 0 0 10px 10px;
+    text-shadow: 2px 2px 4px black;
+}
+
+#carrouselNavigator{
+    width: fit-content;
+    height: fit-content;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+    margin: -16px auto 0 auto;
+    z-index: 2;
+}
+
+.carrouselDot{
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    cursor: pointer;
+    box-shadow: black 1px 1px 2px 1px;
+}
+
+.carrouselDotHere{
+    background-color: white;
+}
+
+.carrouselDotNotHere{
+    background-color: rgb(144, 144, 144);
 }
