--- a/index.css
+++ b/index.css
@@ -48,6 +48,10 @@ body {
     color: black;
 }
 
+.game:hover>.parentGameOnRightImg>.versionGame {
+    color: black;
+}
+
 .game:hover>.imgGame {
     border: 1px solid black;
 }
@@ -68,7 +72,8 @@ body {
     border: 1px solid white;
 }
 
-.dateGame {
+.dateGame,
+.versionGame{
     color: white;
     font-size: 0.8rem;
     font-family: 'Roboto', sans-serif;
@@ -83,6 +88,8 @@ body {
     margin: 0 auto;
     overflow: hidden;
     margin-top: 50px;
+    box-shadow: 4px 4px 0 -2px white;
+    border-radius: 10px;
 }
 
 .carrouselFrameHere{
@@ -102,6 +109,7 @@ body {
     position: relative;
     background-position: center;
     background-size: 40%;
+    cursor: pointer;
 }
 
 .carrouselFrame::before {
@@ -124,14 +132,21 @@ body {
 .messageText {
     font-size: 1.5rem;
     font-weight: bold;
-    margin: 0 0 5px 10px;
-    text-shadow: 1px 1px 3px blue;
+    margin: 0 0 2px 10px;
+    text-shadow: 2px 1px 2px #2828a5;
 }
 
 .dateText {
     font-size: 1rem;
+    margin: 0 0 2px 10px;
+    text-shadow: 2px 2px 4px black;
+}
+
+.version{
+    font-size: 0.8rem;
     margin: 0 0 10px 10px;
     text-shadow: 2px 2px 4px black;
+
 }
 
 #carrouselNavigator{
@@ -141,23 +156,32 @@ body {
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    gap: 5px;
+    gap: 4px;
     margin: -16px auto 0 auto;
     z-index: 2;
 }
 
 .carrouselDot{
-    width: 10px;
-    height: 10px;
+    width: 8px;
+    height: 8px;
     border-radius: 50%;
     cursor: pointer;
-    box-shadow: black 1px 1px 2px 1px;
+    box-shadow: black 1px 1px 1px 0;
+    transition: 0.2s ease-in-out;
+}
+
+.carrouselDot:hover{
+    background-color: white;
+    border-radius: 6px;
+    width: 12px;
 }
 
 .carrouselDotHere{
     background-color: white;
+    border-radius: 6px;
+    width: 12px;
 }
 
 .carrouselDotNotHere{
-    background-color: rgb(144, 144, 144);
+    background-color: rgb(150, 150, 150);
 }
