ajout flamme; bouton random; réorganisation, de la liste de jeux, en grid; bouton play au dessus du carrousel des news

--- a/index.css
+++ b/index.css
@@ -18,12 +18,8 @@ body {
 #gameContainer {
     width: 80%;
     height: fit-content;
-    display: flex;
-    flex-direction: row;
-    align-items: left;
-    justify-content: flex-start;
-    flex-wrap: wrap;
-    gap: 10px;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     margin: 50px auto 0 auto;
 }
 
@@ -34,10 +30,12 @@ body {
     flex-direction: row;
     align-items: end;
     gap: 10px;
+    transition: all 0.3s ease-in-out;
+    width: fit-content;
 }
 
 .game:hover {
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.7);
     cursor: pointer;
 }
 
@@ -86,7 +84,7 @@ body {
 
 #carrouselNews {
     width: 80%;
-    height: 250px;
+    min-height: 250px;
     align-items: center;
     margin: 0 auto;
     overflow: hidden;
@@ -113,7 +111,7 @@ body {
     position: relative;
     background-position: center;
     background-size: 40%;
-    cursor: pointer;
+    cursor: url("windows-start-button-logo.png"), auto;
 }
 
 .carrouselFrame::before {
@@ -123,7 +121,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(30px) saturate(1.5);
 }
 
 .carrouselFrame p {
@@ -219,7 +217,8 @@ body {
 }
 
 .menuButton,
-#searchButton {
+#searchButton,
+#menuRandom {
     color: white;
     cursor: pointer;
     display: flex;
@@ -229,12 +228,14 @@ body {
 }
 
 .menuButton>span,
-#searchButton>span {
+#searchButton>span,
+#menuRandom>span {
     font-size: 1.7rem;
 }
 
 .menuButton:hover,
-#searchButton:hover {
+#searchButton:hover,
+#menuRandom:hover {
     color: royalblue;
     background-color: rgb(232, 239, 255);
 }
@@ -318,4 +319,130 @@ body {
 .versionGame>span {
     margin-left: 5px;
     font-size: 1.3rem;
+}
+
+body .footer {
+    z-index: 0;
+    --footer-background: linear-gradient(180deg, #5ebac938 0%, #5ebac938 10%, #FF490138 50%, #FF490138 100%);
+    backdrop-filter: blur(10px) saturate(1.5);
+    display: grid;
+    position: fixed;
+    grid-area: footer;
+    min-height: 12rem;
+    bottom: -12rem;
+    width: 100%;}
+
+body .footer .bubbles {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 1rem;
+    background: var(--footer-background);
+    filter: url("#blob");
+}
+
+body .footer .bubbles .bubble {
+    position: absolute;
+    left: var(--position, 50%);
+    background: var(--footer-background);
+    border-radius: 100%;
+    -webkit-animation: bubble-size var(--time, 4s) ease-in infinite var(--delay, 0s), bubble-move var(--time, 4s) ease-in infinite var(--delay, 0s);
+    animation: bubble-size var(--time, 4s) ease-in infinite var(--delay, 0s), bubble-move var(--time, 4s) ease-in infinite var(--delay, 0s);
+    transform: translate(-50%, 100%);
+}
+
+body .footer .content {
+    z-index: 0;
+    display: grid;
+    grid-template-columns: 1fr auto;
+    grid-gap: 4rem;
+    padding: 2rem;
+    background: var(--footer-background);
+}
+
+body .footer .content a,
+body .footer .content p {
+    color: #F5F7FA;
+    text-decoration: none;
+}
+
+body .footer .content b {
+    color: white;
+}
+
+body .footer .content p {
+    margin: 0;
+    font-size: 0.75rem;
+}
+
+body .footer .content>div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+body .footer .content>div>div {
+    margin: 0.25rem 0;
+}
+
+body .footer .content>div>div>* {
+    margin-right: 0.5rem;
+}
+
+body .footer .content>div .image {
+    align-self: center;
+    width: 4rem;
+    height: 4rem;
+    margin: 0.25rem 0;
+    background-size: cover;
+    background-position: center;
+}
+
+@-webkit-keyframes bubble-size {
+
+    0%,
+    75% {
+        width: var(--size, 4rem);
+        height: var(--size, 4rem);
+    }
+
+    100% {
+        width: 0rem;
+        height: 0rem;
+    }
+}
+
+@keyframes bubble-size {
+
+    0%,
+    75% {
+        width: var(--size, 4rem);
+        height: var(--size, 4rem);
+    }
+
+    100% {
+        width: 0rem;
+        height: 0rem;
+    }
+}
+
+@-webkit-keyframes bubble-move {
+    0% {
+        bottom: -4rem;
+    }
+
+    100% {
+        bottom: var(--distance, 10rem);
+    }
+}
+
+@keyframes bubble-move {
+    0% {
+        bottom: -4rem;
+    }
+
+    100% {
+        bottom: var(--distance, 10rem);
+    }
 }
