--- a/zoom/index.css
+++ b/zoom/index.css
@@ -21,3 +21,23 @@ body{
     left: 0.5%;
     width: 99%;
 }
+
+#backtohome {
+    position: absolute;
+    top: 10px;
+    left: 5px;
+    width: fit-content;
+    height: fit-content;
+    z-index: 100;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+    border-radius: 5px;
+    border: 1px solid #2196F3;
+    padding: 2px 5px;
+    font-size: 13px;
+}
+
+#backtohome:hover {
+    background-color: #2196F3;
+    color: white;
+}
