--- a/index.css
+++ b/index.css
@@ -24,6 +24,7 @@ body {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     margin: 50px auto 0 auto;
+    row-gap: 5px;
 }
 
 .game {
