--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Briem+Hand:wght@100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 html,
 body {
     height: 100%;
@@ -131,7 +132,7 @@ body {
 .carrouselFrame p {
     position: relative;
     z-index: 1;
-    color: white;
+    color: rgb(252, 252, 252);
     font-family: 'Roboto', sans-serif;
 }
 
@@ -140,19 +141,21 @@ body {
     font-weight: bold;
     margin: 0 0 2px 10px;
     text-shadow: 2px 1px 2px #2828a5;
+    color: rgb(245, 245, 245);
 }
 
 .dateText {
     font-size: 1rem;
     margin: 0 0 2px 10px;
     text-shadow: 1px 1px 2px black;
+    color: rgb(245, 245, 245);
 }
 
 .version {
     font-size: 0.8rem;
     margin: 0 0 10px 10px;
     text-shadow: 2px 2px 4px black;
-
+    color: rgb(245, 245, 245);
 }
 
 #carrouselNavigator {
@@ -475,4 +478,45 @@ body .footer .content>div .image {
         font-weight: 300;
         color: royalblue;
     }
+}
+
+.titreGameList {
+    margin-left: 10px;
+    margin-bottom: 30px;
+    padding: 0;
+    z-index: 1;
+}
+
+.titreGameList>li{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #a1baa36e;
+    margin: 4px 0;
+    border-radius: 8px;
+    padding: 3px 8px;
+}
+
+.titreGameList>li>p {
+    color: rgb(252, 252, 252);
+    font-size: 1.3rem;
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+    text-shadow: 2px 1px 2px #2828a5;
+    margin: 0;
+}
+
+.titreGameList>li>.datelist {
+    color: rgba(255, 255, 255, 0.802);
+    font-size: 1rem;
+    font-family: 'Roboto', sans-serif;
+    font-weight: normal;
+    text-shadow: 1px 0px 1px #2828a5;
+    margin-left: 15px;
+}
+
+.titreGameList>li:nth-child(odd){
+    background-color: #ffffff6e;
 }
