--- a/index.css
+++ b/index.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Briem+Hand:wght@100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Jacquard+12&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
 
 html,
 body {
@@ -63,10 +67,11 @@ body {
 .titreGame {
     color: white;
     font-size: 1.2rem;
-    font-family: 'Roboto', sans-serif;
+    font-family: "Major Mono Display", monospace;
+    font-weight: 400;
+    font-style: normal;
     margin: 0;
     padding: 0;
-    font-weight: bold;
 }
 
 .imgGame {
@@ -79,12 +84,19 @@ body {
 .dateGame,
 .versionGame {
     color: white;
-    font-size: 0.8rem;
-    font-family: 'Roboto', sans-serif;
+    font-size: 11px;
+    font-family: "Orbitron", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: lighter;
+    font-style: normal;
     margin: 0;
     padding: 0;
     display: flex;
     align-items: center;
+}
+
+.dateGame {
+    font-size: 10px;
 }
 
 #carrouselNews {
@@ -133,29 +145,37 @@ body {
     position: relative;
     z-index: 1;
     color: rgb(252, 252, 252);
-    font-family: 'Roboto', sans-serif;
 }
 
 .messageText {
-    font-size: 1.5rem;
-    font-weight: bold;
-    margin: 0 0 2px 10px;
-    text-shadow: 2px 1px 2px #2828a5;
+    font-size: 2rem;
+    margin: 0 0 5px 10px;
     color: rgb(245, 245, 245);
+    font-family: "Josefin Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+    text-shadow: 0 0 10px #360303;
 }
 
-.dateText {
-    font-size: 1rem;
-    margin: 0 0 2px 10px;
-    text-shadow: 1px 1px 2px black;
-    color: rgb(245, 245, 245);
+.messageText_span {
+    color: #8B0000;
+    font-family: "Major Mono Display", monospace;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 2rem;
+    text-shadow: 2px 1px 0px #F5F5F5;
 }
 
-.version {
+.dateText_version {
     font-size: 0.8rem;
-    margin: 0 0 10px 10px;
-    text-shadow: 2px 2px 4px black;
-    color: rgb(245, 245, 245);
+    margin: 0 0 10px 13px;
+    color: #F5F5F5;
+    font-family: "Orbitron", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: lighter;
+    font-style: normal;
+    text-shadow: 0 0 5px #360303;
 }
 
 #carrouselNavigator {
@@ -325,7 +345,7 @@ body {
 
 .versionGame>span {
     margin-left: 5px;
-    font-size: 1.3rem;
+    font-size: 1.2rem;
 }
 
 body .footer {
@@ -481,42 +501,41 @@ body .footer .content>div .image {
 }
 
 .titreGameList {
-    margin-left: 10px;
-    margin-bottom: 30px;
+    margin-left: 30px;
+    margin-bottom: 15px;
     padding: 0;
     z-index: 1;
 }
 
-.titreGameList>li{
+.titreGameList>li {
     width: 100%;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
     align-items: center;
-    background-color: #a1baa36e;
-    margin: 4px 0;
-    border-radius: 8px;
-    padding: 3px 8px;
 }
 
 .titreGameList>li>p {
     color: rgb(252, 252, 252);
-    font-size: 1.3rem;
-    font-family: 'Roboto', sans-serif;
-    font-weight: bold;
-    text-shadow: 2px 1px 2px #2828a5;
+    font-size: 1.5rem;
+    font-family: "Josefin Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 300;
+    font-style: normal;
     margin: 0;
+    padding: 5px;
+    text-shadow: 0 0 5px #000000;
 }
 
-.titreGameList>li>.datelist {
-    color: rgba(255, 255, 255, 0.802);
-    font-size: 1rem;
-    font-family: 'Roboto', sans-serif;
-    font-weight: normal;
-    text-shadow: 1px 0px 1px #2828a5;
-    margin-left: 15px;
+.titreGameList>li>p>span {
+    font-size: 1.5rem;
 }
 
-.titreGameList>li:nth-child(odd){
-    background-color: #ffffff6e;
+.titreGameList>li::before {
+    content: '';
+    width: 8px;
+    height: 8px;
+    background-color: #8B0000;
+    border-radius: 50%;
+    position: absolute;
+    margin-left: -15px;
+    border: 1px solid white;
 }
