--- a/index.css
+++ b/index.css
@@ -116,6 +116,17 @@ body {
     display: flex;
 }
 
+
+@keyframes carrouselFrame {
+    from {
+        background-position: 40% center;
+    }
+
+    to {
+        background-position: center center;
+    }
+}
+
 .carrouselFrameNotHere {
     display: none;
 }
@@ -129,6 +140,7 @@ body {
     position: relative;
     background-position: center;
     background-size: 40%;
+    animation: forwards 5s ease-out carrouselFrame;
 }
 
 .carrouselFrame::before {
@@ -195,24 +207,26 @@ body {
     width: 8px;
     height: 8px;
     border-radius: 50%;
-    box-shadow: black 1px 1px 1px 0;
-    transition: 0.2s ease-in-out;
+    transition: 0.2s ease-in;
 }
 
 .carrouselDot:hover {
-    background-color: white;
+    background-color: #8B0000;
+    box-shadow: #F5F5F5 1px 1px 1px 0;
     border-radius: 6px;
     width: 12px;
 }
 
 .carrouselDotHere {
-    background-color: white;
+    background-color: #8B0000;
+    box-shadow: #F5F5F5 1px 1px 1px 0;
     border-radius: 6px;
     width: 12px;
 }
 
 .carrouselDotNotHere {
-    background-color: rgb(150, 150, 150);
+    background-color: #F5F5F5;
+    box-shadow: black 1px 1px 1px 0;
 }
 
 #menu {
