text shadow commit list

--- a/index.css
+++ b/index.css
@@ -536,7 +536,7 @@ body .footer .content>div .image {
     font-style: normal;
     margin: 0;
     padding: 5px;
-    text-shadow: 0 0 5px #000000;
+    text-shadow: 1px 1px 3px #000000;
 }
 
 .titreGameList>li>p>span {
