--- a/index.css
+++ b/index.css
@@ -60,6 +60,56 @@ body {
     color: black;
 }
 
+.game:hover>.parentGameOnRightImg>.versionGame>span {
+    animation: forwards 0.6s ease-in versionGamesecousse;
+}
+
+@keyframes versionGamesecousse {
+    0% {
+        rotate: 0;
+    }
+
+    10% {
+        rotate: 7deg;
+    }
+
+    20% {
+        rotate: -7deg;
+    }
+
+    30% {
+        rotate: 7deg;
+    }
+
+    40% {
+        rotate: -7deg;
+    }
+
+    50% {
+        rotate: 7deg;
+    }
+
+    60% {
+        rotate: -7deg;
+    }
+
+    70% {
+        rotate: 7deg;
+    }
+
+    80% {
+        rotate: -7deg;
+    }
+
+    90% {
+        rotate: 7deg;
+    }
+
+    100% {
+        rotate: 0;
+    }
+}
+
 .game:hover>.imgGame {
     box-shadow: 0 0 4px 0 rgb(103, 103, 103);
 }
@@ -493,24 +543,149 @@ body .footer .content>div .image {
     position: absolute;
     display: none;
     font-family: 'Briem Hand', cursive;
-    animation: fontweight 2s infinite;
     font-size: 1.8rem;
+    color: royalblue;
+    letter-spacing: -4px;
 }
 
-@keyframes fontweight {
+#playText1 {
+    animation: fontweight1 5s infinite;
+    margin: 0;
+    padding: 0;
+}
+
+#playText2 {
+    animation: fontweight2 5s infinite;
+    margin: 0;
+    padding: 0;
+}
+
+#playText3 {
+    animation: fontweight3 5s infinite;
+    margin: 0;
+    padding: 0;
+}
+
+#playText4 {
+    animation: fontweight4 5s infinite;
+    margin: 0;
+    padding: 0;
+}
+
+#playText5 {
+    animation: fontweight5 5s infinite;
+    margin: 0;
+    padding: 0;
+}
+
+@keyframes fontweight1 {
     0% {
         font-weight: 300;
-        color: royalblue;
     }
 
-    50% {
+    3.4% {
         font-weight: 900;
-        color: rgb(204, 63, 53);
+        color: white;
+    }
+
+    6.8% {
+        font-weight: 300;
     }
 
     100% {
         font-weight: 300;
-        color: royalblue;
+    }
+}
+
+@keyframes fontweight2 {
+    0% {
+        font-weight: 300;
+    }
+
+    3.4% {
+        font-weight: 300;
+    }
+
+    6.8% {
+        font-weight: 900;
+        color: white;
+    }
+
+    10% {
+        font-weight: 300;
+    }
+
+    100% {
+        font-weight: 300;
+    }
+}
+
+@keyframes fontweight3 {
+    0% {
+        font-weight: 300;
+    }
+
+    6.8% {
+        font-weight: 300;
+    }
+
+    10% {
+        font-weight: 900;
+        color: white;
+    }
+
+    13.4% {
+        font-weight: 300;
+    }
+
+    100% {
+        font-weight: 300;
+    }
+}
+
+@keyframes fontweight4 {
+    0% {
+        font-weight: 300;
+    }
+
+    10% {
+        font-weight: 300;
+    }
+
+    13.4% {
+        font-weight: 900;
+        color: white;
+    }
+
+    16.8% {
+        font-weight: 300;
+    }
+
+    100% {
+        font-weight: 300;
+    }
+}
+
+@keyframes fontweight5 {
+    0% {
+        font-weight: 300;
+    }
+
+    13.4% {
+        font-weight: 300;
+    }
+
+    16.8% {
+        font-weight: 900;
+        color: white;
+    }
+
+    20% {
+        font-weight: 300;
+    }
+
+    100% {
+        font-weight: 300;
     }
 }
 
