bug fix blur backddrop menu à cause de l'animation de spwan qui avait une opacité en forwards qui créer du multi couche pas supporté par chrome

--- a/index.css
+++ b/index.css
@@ -315,12 +315,12 @@ body {
 @keyframes spawn_menu {
     from {
         transform: translateY(-100%);
-        opacity: 0;
+        visibility: hidden;
     }
 
     to {
         transform: translateY(0);
-        opacity: 1;
+        visibility: visible;
     }
 }
 
